<resources>

    <string name="app_name" translatable="false">Rangoo</string>
    <string name="_COM_RANGO_PREFERENCES" translatable="false">com.rangoo.user.session</string>

    <string name="sem_fome_essa_semana">Aparentemente você está sem fome essa semana!</string>
    <string name="deixe_me_ver_opcoes">Deixe-me ver as opções</string>
    <string name="email" translatable="false">Email</string>
    <string name="aniversario">Aniversário</string>
    <string name="endereco">Endereço</string>
    <string name="contato">Contato</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="ou">ou</string>
    <string name="sair">Sair</string>
    <string name="concluir">Concluir</string>
    <string name="nome">Nome</string>
    <string name="remove_item">Remover Item</string>
    <string name="confirm_remove_item">Confirmar a remoção do item?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="solicitacao_redefinicao_enviada">Solicitação de redefinição de senha enviada para seu email.</string>
    <string name="user_google_error">Usuario Google Inválido</string>
    <string name="user_login_error">Usuário Inválido: Verifique os campos e tente novamente!</string>
    <string name="user_login_success">Usuario Autenticado com Sucesso</string>
    <string name="error_login_google">Erro ao tentar conectar com Google!</string>
    <string name="error_signout">Error ao efetuar signOut, tente novamente</string>
    <string name="imagem_alterada">Imagem alterada com sucesso!</string>
    <string name="error_update_imagem">Falha ao realizar salvamento da imagem!</string>
    <string name="error_save_imagem">Falha ao realizar salvamento da imagem!</string>
    <string name="signUp_success">Usuario cadastro com sucesso!</string>
    <string name="signUp_error">Error ao cadastrar novo usuário</string>
    <string name="_FOOD_TO_DETAIL">FoodToDetail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="USER_LIST">USER_LIST</string>
    <string name="USER_ID">USER_ID</string>
</resources>