<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".admin.Activities.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/rangooLogo"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/rangoologo"
        android:layout_marginBottom="80dp"/>

    <EditText
        android:id="@+id/signin_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_border"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_border"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_gravity="right"
        android:backgroundTint="@color/transparent"
        android:outlineProvider="none"
        android:text="@string/redefinir_senha"
        android:padding="-5dp"
        android:textColor="@color/gray"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/brave"/>

    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/buttongoogle"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/transparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/transparent"
        android:outlineProvider="none"
        android:text="@string/cadastre_se"
        android:textColor="@color/gray"
        android:textAllCaps="false"/>

</LinearLayout>