<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.ProfileActivity">

    <LinearLayout
        android:background="@drawable/card_border_radius"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_margin="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibtn_imageUser"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/perfil_image_user"
            android:background="@drawable/border_image"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/nameUser"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/email"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/emailUser"
            android:text=""
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/aniversario"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/birthdayUser"
            android:text=""
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/endereco"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/addressUser"
            android:text=""
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/contato"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/phoneUser"
            android:text=""
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_recoverPass"
        android:text="@string/recuperar_senha"
        android:textColor="@color/gray"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_logOut"
        android:text="@string/sair"
        android:textColor="@color/baron"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>